# hri_repo

./: .gitignore  env.example  main.py  utils.py
codeAssignment/: demo-chat-robot-gemini.py  face.py  main.py  reachy.py  readme.md  requirements.txt
project/: README.md  __init__.py  body.py  env.example  main.py  pyproject.toml  requirements.txt  session.py  settings.py  utils.py
project/assets/: attribution.md
project/conversations/: __init__.py  pleasantries.py  wrapup.py
project/data/: alex-convo.md  alex.md
project/games/: __init__.py  describe_images.py  description.py  games.py  storytelling.py  twenty_questions.py
