[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpha-mini-rug>=0.7.3.2",
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "attrs>=26.1.0",
    "autobahn>=25.12.2",
    "automat>=25.4.16",
    "cbor2>=6.1.2",
    "certifi>=2026.5.20",
    "cffi>=2.0.0",
    "constantly>=23.10.4",
    "contourpy>=1.3.3",
    "cryptography>=48.0.0",
    "cycler>=0.12.1",
    "deepface>=0.0.100",
    "distro>=1.9.0",
    "dotenv>=0.9.9",
    "enum-compat>=0.0.3",
    "fonttools>=4.63.0",
    "future>=1.0.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "hyperlink>=21.0.0",
    "idna>=3.18",
    "incremental>=24.11.0",
    "jiter>=0.15.0",
    "kiwisolver>=1.5.0",
    "matplotlib>=3.10.9",
    "msgpack>=1.1.2",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "opencv-python>=4.13.0.92",
    "packaging>=26.2",
    "pillow>=12.2.0",
    "pluginmanager>=0.4.1",
    "py-ubjson>=0.16.1",
    "pycparser>=3.0",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pyopenssl>=26.2.0",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pyzmq>=27.1.0",
    "serialization>=1.2.3",
    "service-identity>=26.1.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "speechrecognition>=3.16.1",
    "tf-keras>=2.21.0",
    "tqdm>=4.67.3",
    "twisted>=26.4.0",
    "txaio>=25.12.2",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "ujson>=5.12.1",
    "vexmessage>=0.4.0",
    "zope-interface>=8.5",
]
